# SentielStone

./: CMakeLists.txt  sdkconfig
main/: CMakeLists.txt  main.c
main/app/msm/: msm.c  msm.h
main/drivers/cap_touch/: cap_touch.c  cap_touch.h
main/drivers/i2c_driver/: i2c_driver.c  i2c_driver.h
main/drivers/pn532/: pn532.c  pn532_user.c  pn532_user.h
main/drivers/vl53l0x/: vl53l0x.c  vl53l0x.h  vl53l0x_user.c  vl53l0x_user.h
main/drivers/ws2812/: ws2812.c  ws2812_api.c  ws2812_api.h
